--- a/backend/package.json
+++ b/backend/package.json
@@ -28,12 +28,15 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.12.0",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.64.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfjs-dist": "3.11.174",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
